tests/baselines/reference/getAccessorWithImpliedReturnTypeAndFunctionClassMerge.errors.txt
tests/cases/compiler/getAccessorWithImpliedReturnTypeAndFunctionClassMerge.ts(1,18): error TS2300: Duplicate identifier '_'.
tests/cases/compiler/getAccessorWithImpliedReturnTypeAndFunctionClassMerge.ts(1,41): error TS2304: Cannot find name '_'.
tests/cases/compiler/getAccessorWithImpliedReturnTypeAndFunctionClassMerge.ts(2,18): error TS2300: Duplicate identifier '_'.
tests/cases/compiler/getAccessorWithImpliedReturnTypeAndFunctionClassMerge.ts(2,34): error TS2304: Cannot find name '_'.
tests/cases/compiler/getAccessorWithImpliedReturnTypeAndFunctionClassMerge.ts(4,16): error TS2300: Duplicate identifier '_'.
tests/cases/compiler/getAccessorWithImpliedReturnTypeAndFunctionClassMerge.ts(15,15): error TS2300: Duplicate identifier '_'.
tests/cases/compiler/getAccessorWithImpliedReturnTypeAndFunctionClassMerge.ts(21,20): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.


==== tests/cases/compiler/getAccessorWithImpliedReturnTypeAndFunctionClassMerge.ts (7 errors) ====
    declare function _<T>(value: Array<T>): _<T>;
                     ~
!!! error TS2300: Duplicate identifier '_'.
                                            ~
!!! error TS2304: Cannot find name '_'.
    declare function _<T>(value: T): _<T>;
                     ~
!!! error TS2300: Duplicate identifier '_'.
                                     ~
!!! error TS2304: Cannot find name '_'.
    
    declare module _ {
                   ~
!!! error TS2300: Duplicate identifier '_'.
        export function each<T>(
            //list: List<T>,
            //iterator: ListIterator<T, void>,
            context?: any): void;
    
        interface ListIterator<T, TResult> {
            (value: T, index: number, list: T[]): TResult;
        }
    }
    
    declare class _<T> {
                  ~
!!! error TS2300: Duplicate identifier '_'.
        each(iterator: _.ListIterator<T, void>, context?: any): void;
    }
    
    module MyModule { 
        export class MyClass {
            public get myGetter() {
                       ~~~~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
                var obj:any = {};
                
                return obj;
            }
        }
    }